# mgear4

./: .gitignore  .gitmodules  .readthedocs.yaml  .sconsign.dblite  AUTHORS.md  BUILD.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Contributor_License_Agreement.md  LICENSE  README.md  SConstruct  drag_n_drop_install.py  excons.cache  mGear.mod.in  mgear.env  mgear.env.tmp  mgear.status  pull_request_template.md  pytest.ini  releaseLog.rst  test_file_a.py
.github/workflows/: code_quality.yml  python-package.yml  python2_run_tests.yml  python3_run_tests.yml
anim_picker_samples/: biped.pkr  biped_simple.pkr
cmake/: FindMaya.cmake
docs/: Makefile  conf.py  make.bat
docs/exts/: changelog_links.py
docs/source/: FAQ.rst  animbitsModules.rst  animbitsUserDocumentation.rst  baseModules.rst  conf.py  contents.rst  crankUserDocumentation.rst  framework.rst  index.rst  license.rst  modulesList.rst  official-unofficial-workflow.rst  overview.rst  quickStart.rst  releaseLog.rst  rigbitsModules.rst  rigbitsUserDocumentation.rst  shifterModules.rst  (+8 more)
release/: mGear.mod
src/: CMakeLists.txt  add10scalarNode.cpp  curveCns.cpp  ikfk2Bone.cpp  interpolateMatrix.cpp  inverseRotOrder.cpp  linearInterpolate3DvectorNode.cpp  matrixConstraint.cpp  mgear_solvers.h  mulMatrix.cpp  percentageToU.cpp  rayCastPosition.cpp  register.cpp  rollSplineKine.cpp  slideCurve2.cpp  spinePointAt.cpp  springGravityNode.cpp  springNode.cpp  squashStretch2.cpp  trigonometryAngle.cpp  uToPercentage.cpp  utils.cpp  vertexPosition.cpp
test_folder/: test_file_b.py
tests/: conftest.py
(+1129 files in other folders)
